--- a/index.html
+++ b/index.html
@@ -422,11 +422,18 @@
                         <td><audio controls="" preload="none"><source src="asset/audio/Sarah/hifigan_pretrained_Sarah_02.wav"></audio></td>
                     </tr>
                     <tr>
-                        <td nowrap width="160"><tt>Adobe<br>Audition</tt></td>
-                        <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_Charlie_01.wav"></audio></td>
-                        <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_Sarah_01.wav"></audio></td>
-                        <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_Charlie_02.wav"></audio></td>
-                        <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_Sarah_02.wav"></audio></td>
+                        <td nowrap width="160"><tt>Adobe<br>Audition<br>(50% Dereverb)</tt></td>
+                        <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_50_Charlie_01.wav"></audio></td>
+                        <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_50_Sarah_01.wav"></audio></td>
+                        <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_50_Charlie_02.wav"></audio></td>
+                        <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_50_Sarah_02.wav"></audio></td>
+                    </tr>
+                    <tr>
+                        <td nowrap width="160"><tt>Adobe<br>Audition<br>(100% Dereverb)</tt></td>
+                        <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_100_Charlie_01.wav"></audio></td>
+                        <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_100_Sarah_01.wav"></audio></td>
+                        <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_100_Charlie_02.wav"></audio></td>
+                        <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_100_Sarah_02.wav"></audio></td>
                     </tr>
                     <tr>
                         <td nowrap width="160"><tt><b>Ours</b></tt></td>
