--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
 			<div class="content" id="samples">
         <h2 style="text-align:center;">Random Samples</h2>
-				<p style="text-align: center;">Here we show the comparison results of speech dereverberation on real recordings. <tt>Wiener</tt> has little effect on dereverberation and creates strong extra artifacts. While <tt>WPE</tt> produces less artifacts, its dereverberation effect is  minimal. <tt>Demucs</tt> fails to generate clear results since it requires a much larger amount of reverberant data to train. We also show the fine-tuned results on our real recording dataset based on Demucs publically released pretrained weights, denoted as <tt>Demucs (pretrained)</tt>. <tt>HiFi-GAN</tt> outputs inadequate processed outcomes in terms of both dereverberation and clarity of speech. In addition, we include its fine-tuned results based on its released pretrained weight, denoted as <tt>Hifi-GAN (pretrained)</tt>. In contrast, <tt>Ours</tt> processes speech signals in a way that sounds the closest to the clean signals which is recorded by a lavalier microphone on the user. </p>
+				<p style="text-align: center;">Here we show the comparison results of speech dereverberation on real recordings. <tt>Wiener</tt> has little effect on dereverberation and creates strong extra artifacts. While <tt>WPE</tt> produces less artifacts, its dereverberation effect is  minimal. <tt>Demucs</tt> fails to generate clear results since it requires a much larger amount of reverberant data to train. We also show the fine-tuned results on our real recording dataset based on Demucs publically released pretrained weights, denoted as <tt>Demucs (pretrained)</tt>. <tt>HiFi-GAN</tt> outputs inadequate processed outcomes in terms of both dereverberation and clarity of speech. In addition, we include its fine-tuned results based on its released pretrained weight, denoted as <tt>Hifi-GAN (pretrained)</tt>. Finally, we process the recorded speech by Adobe Audition. The default setting (50% dereverberation) and the max setting (100%) are individually applied, demonstrated as <tt>Audition (50%)</tt> and <tt>Audition (100%)</tt>, respectively. In contrast, <tt>Ours</tt> processes speech signals in a way that sounds the closest to the clean signals which is recorded by a lavalier microphone on the user. </p>
 				<div class="content2" id="table">
                 <table style="text-align: center;" class="center">
                     <colgroup>
@@ -422,14 +422,14 @@
                         <td><audio controls="" preload="none"><source src="asset/audio/Sarah/hifigan_pretrained_Sarah_02.wav"></audio></td>
                     </tr>
                     <tr>
-                        <td nowrap width="160"><tt>Adobe<br>Audition<br>(50% Dereverb)</tt></td>
+                        <td nowrap width="160"><tt>Audition<br>(50% Dereverb)</tt></td>
                         <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_50_Charlie_01.wav"></audio></td>
                         <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_50_Sarah_01.wav"></audio></td>
                         <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_50_Charlie_02.wav"></audio></td>
                         <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_50_Sarah_02.wav"></audio></td>
                     </tr>
                     <tr>
-                        <td nowrap width="160"><tt>Adobe<br>Audition<br>(100% Dereverb)</tt></td>
+                        <td nowrap width="160"><tt>Audition<br>(100% Dereverb)</tt></td>
                         <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_100_Charlie_01.wav"></audio></td>
                         <td><audio controls="" preload="none"><source src="asset/audio/Sarah/audition_100_Sarah_01.wav"></audio></td>
                         <td><audio controls="" preload="none"><source src="asset/audio/Charlie/audition_100_Charlie_02.wav"></audio></td>
