--- a/index.html
+++ b/index.html
@@ -347,7 +347,10 @@
 				<!-- <p style="text-align: center;">Click <a href="http://latent-composition.csail.mit.edu/other_projects/anyres_gan/supplementary_video_v4_1600_noaudio.mp4">here</a> to view our supplementary video!</p> -->
                 <p style="text-align: center;">Here we demonstrate a video of an online conversation between two people from two different environments. <br>The male on the left resides in a conference room while the female on the right stays in an large lecture hall. </p>
 				<center>
-					<iframe width="900" height="620" src="https://www.youtube.com/embed/0l11u2HzQrQ?rel=0&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="900" height="620" src="https://www.youtube.com/embed/dk-3kI3Qa6M?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <!-- <video width="900" height="620" poster="asset/video/supp.jpg" controls>
+                        <source src="asset/video/supp.mp4" type="video/mp4">
+                    </video> -->
 				</center>
                 <p></p>
       </div>
