--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       <div class="content" id="video">
         <h2 style="text-align:center;">Supplementary Video</h2>
 				<!-- <p style="text-align: center;">Click <a href="http://latent-composition.csail.mit.edu/other_projects/anyres_gan/supplementary_video_v4_1600_noaudio.mp4">here</a> to view our supplementary video!</p> -->
-                <p style="text-align: center;">Here we demonstrate a video of an online conversation between two people from two different environments. <br>The male on the left resides in a conference room while the female on the right stays in an large lecture hall. </p>
+                <p style="text-align: center;">Here we demonstrate the process of the personalization step introduced in the paper. Then we show a video of an online conversation between a male and a female from two different environments. <br>The male on the left resides in a conference room while the female on the right stays in an small study room. </p>
 				<center>
 					<iframe width="900" height="620" src="https://www.youtube.com/embed/dk-3kI3Qa6M?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <!-- <video width="900" height="620" poster="asset/video/supp.jpg" controls>
