--- a/index.html
+++ b/index.html
@@ -264,16 +264,14 @@
     <div class="content">
 			<h1>Personalized Dereverberation of Speech</h1>
             <h2 style="text-align:center;"><i>Supplementary Material</i></h2>
-        <p id="authors">
+        <!-- <p id="authors">
             <a href="https://github.com/henryxrl">Ruilin Xu</a>
             <a href="https://www.linkedin.com/in/krishnanguru">Gurunandan Krishnan</a>
             <a href="https://www.cs.columbia.edu/~cxz/">Changxi Zheng</a>
             <a href="https://www.cs.columbia.edu/~nayar/">Shree K. Nayer</a>
             <br>
-            <!-- <strong>MIT Computer Science and Artificial Intelligence Laboratory</strong> -->
             Columbia University & Snap Inc.
-            <!-- <br><i>ICASSP 2023</i> -->
-        </p>
+        </p> -->
 				<!-- <font size="+2">
 					<p style="text-align: center;">
 						<a href="https://arxiv.org/abs/2204.07156" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
