Small fix in html

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                             </button>
                         </td>
                         <td>
-                            <p><tt>Adobe Audition</tt> produces achieves some dereverberation but distorts the audio.</p>
+                            <p><tt>Adobe Audition</tt> produces some dereverberation but distorts the audio.</p>
                         </td>
                     </tr>
                     <tr>
